--- a/dist.ini
+++ b/dist.ini
@@ -19,5 +19,6 @@ repository=http://github.com/sharyanto/perl-Perinci-Examples-Bin
 Rinci=1.1.32
 
 perl=5.010001
-Perinci::Examples=0.14
 Perinci::CmdLine=0.67
+;!lint-prereqs assume-used # undetected by scan_prereqs, used via Riap
+Perinci::Examples=0.14
