[dzil] Generate scripts dynamically with DZP::Rinci::ScriptFromFunc

--- a/dist.ini
+++ b/dist.ini
@@ -2,6 +2,17 @@ version=0.04
 
 name=Perinci-Examples-Bin
 
+[Rinci::ScriptFromFunc]
+script= cmdline=Perinci::CmdLine, name=peri-eg-append-file, func=/Perinci/Examples/FileStream/append_file
+script= cmdline=Perinci::CmdLine, name=peri-eg-complete-fruits, func=/Perinci/Examples/Completion/fruits
+script= cmdline=Perinci::CmdLine, name=peri-eg-demo-cli-opts, func=/Perinci/Examples/CLI/demo_cli_opts
+script= cmdline=Perinci::CmdLine, name=peri-eg-gen-random-bytes, func=/Perinci/Examples/gen_random_bytes
+script= cmdline=Perinci::CmdLine, name=peri-eg-read-file, func=/Perinci/Examples/FileStream/read_file
+script= cmdline=Perinci::CmdLine, name=peri-eg-test-binary-files, func=/Perinci/Examples/test_binary
+script= cmdline=Perinci::CmdLine, name=peri-eg-test-common-opts, func=/Perinci/Examples/test_common_opts
+script= cmdline=Perinci::CmdLine, name=peri-eg-test-completion, func=/Perinci/Examples/test_completion
+script= cmdline=Perinci::CmdLine, name=peri-eg-write-file, func=/Perinci/Examples/FileStream/write_file
+
 [@Author::PERLANCAR]
 :version=0.23
 
@@ -15,4 +26,4 @@ Rinci=1.1.32
 perl=5.010001
 Perinci::CmdLine=0.67
 ;!lint-prereqs assume-used # undetected by scan_prereqs, used via Riap
-Perinci::Examples=0.42
+Perinci::Examples=0.43
