--- a/dist.ini
+++ b/dist.ini
@@ -1,17 +1,17 @@
 version=0.05
 
-name=Perinci-Examples-Bin
+name=Perinci-Examples-Bin-Classic
 
 [Rinci::ScriptFromFunc]
-script= cmdline=Perinci::CmdLine, name=peri-eg-append-file, func=/Perinci/Examples/FileStream/append_file
-script= cmdline=Perinci::CmdLine, name=peri-eg-complete-fruits, func=/Perinci/Examples/Completion/fruits
-script= cmdline=Perinci::CmdLine, name=peri-eg-demo-cli-opts, func=/Perinci/Examples/CLI/demo_cli_opts
-script= cmdline=Perinci::CmdLine, name=peri-eg-gen-random-bytes, func=/Perinci/Examples/gen_random_bytes
-script= cmdline=Perinci::CmdLine, name=peri-eg-read-file, func=/Perinci/Examples/FileStream/read_file
-script= cmdline=Perinci::CmdLine, name=peri-eg-test-binary-files, func=/Perinci/Examples/test_binary
-script= cmdline=Perinci::CmdLine, name=peri-eg-test-common-opts, func=/Perinci/Examples/test_common_opts
-script= cmdline=Perinci::CmdLine, name=peri-eg-test-completion, func=/Perinci/Examples/test_completion
-script= cmdline=Perinci::CmdLine, name=peri-eg-write-file, func=/Perinci/Examples/FileStream/write_file
+script= cmdline=classic, name=peri-eg-append-file, func=/Perinci/Examples/FileStream/append_file
+script= cmdline=classic, name=peri-eg-complete-fruits, func=/Perinci/Examples/Completion/fruits
+script= cmdline=classic, name=peri-eg-demo-cli-opts, func=/Perinci/Examples/CLI/demo_cli_opts
+script= cmdline=classic, load_modules=Perinci::Examples, name=peri-eg-gen-random-bytes, func=/Perinci/Examples/gen_random_bytes
+script= cmdline=classic, name=peri-eg-read-file, func=/Perinci/Examples/FileStream/read_file
+script= cmdline=classic, load_modules=Perinci::Examples, name=peri-eg-test-binary-files, func=/Perinci/Examples/test_binary
+script= cmdline=classic, load_modules=Perinci::Examples, name=peri-eg-test-common-opts, func=/Perinci/Examples/test_common_opts
+script= cmdline=classic, load_modules=Perinci::Examples, name=peri-eg-test-completion, func=/Perinci/Examples/test_completion
+script= cmdline=classic, name=peri-eg-write-file, func=/Perinci/Examples/FileStream/write_file
 
 [@Author::PERLANCAR]
 :version=0.23
