[dzil] Switch from DZP:Rinci::ScriptFromFunc to DZP:GenPericmdScript

--- a/dist.ini
+++ b/dist.ini
@@ -2,16 +2,54 @@ version=0.06
 
 name=Perinci-Examples-Bin-Classic
 
-[Rinci::ScriptFromFunc]
-script= cmdline=classic, name=peri-eg-append-file, func=/Perinci/Examples/FileStream/append_file
-script= cmdline=classic, name=peri-eg-complete-fruits, func=/Perinci/Examples/Completion/fruits
-script= cmdline=classic, name=peri-eg-demo-cli-opts, func=/Perinci/Examples/CLI/demo_cli_opts
-script= cmdline=classic, load_modules=Perinci::Examples, name=peri-eg-gen-random-bytes, func=/Perinci/Examples/gen_random_bytes
-script= cmdline=classic, name=peri-eg-read-file, func=/Perinci/Examples/FileStream/read_file
-script= cmdline=classic, load_modules=Perinci::Examples, name=peri-eg-test-binary-files, func=/Perinci/Examples/test_binary
-script= cmdline=classic, load_modules=Perinci::Examples, name=peri-eg-test-common-opts, func=/Perinci/Examples/test_common_opts
-script= cmdline=classic, load_modules=Perinci::Examples, name=peri-eg-test-completion, func=/Perinci/Examples/test_completion
-script= cmdline=classic, name=peri-eg-write-file, func=/Perinci/Examples/FileStream/write_file
+[GenPericmdScript/GenPericmdScript::append_file]
+url=/Perinci/Examples/FileStream/append_file
+name=peri-eg-append-file
+cmdline=classic
+
+[GenPericmdScript/GenPericmdScript::fruits]
+url=/Perinci/Examples/Completion/fruits
+name=peri-eg-complete-fruits
+cmdline=classic
+
+[GenPericmdScript/GenPericmdScript::demo_cli_opts]
+url=/Perinci/Examples/CLI/demo_cli_opts
+name=peri-eg-demo-cli-opts
+cmdline=classic
+
+[GenPericmdScript/GenPericmdScript::gen_random_bytes]
+url=/Perinci/Examples/gen_random_bytes
+name=peri-eg-gen-random-bytes
+cmdline=classic
+load_modules=Perinci::Examples
+
+[GenPericmdScript/GenPericmdScript::read_file]
+url=/Perinci/Examples/FileStream/read_file
+name=peri-eg-read-file
+cmdline=classic
+
+[GenPericmdScript/GenPericmdScript::test_binary]
+url=/Perinci/Examples/test_binary
+name=peri-eg-test-binary-files
+cmdline=classic
+load_modules=Perinci::Examples
+
+[GenPericmdScript/GenPericmdScript::test_common_opts]
+url=/Perinci/Examples/test_common_opts
+name=peri-eg-test-common-opts
+cmdline=classic
+load_modules=Perinci::Examples
+
+[GenPericmdScript/GenPericmdScript::test_completion]
+url=/Perinci/Examples/test_completion
+name=peri-eg-test-completion
+cmdline=classic
+load_modules=Perinci::Examples
+
+[GenPericmdScript/GenPericmdScript::write_file]
+url=/Perinci/Examples/FileStream/write_file
+name=peri-eg-write-file
+cmdline=classic
 
 [@Author::PERLANCAR]
 :version=0.23
