--- a/dist.ini
+++ b/dist.ini
@@ -58,9 +58,9 @@ cmdline=classic
 ;Test::More=0.98
 
 [Prereqs]
-;!lint-prereqs assume-used # spec
+;!lint_prereqs assume-used # spec
 Rinci=1.1.32
 
 perl=5.010001
-;!lint-prereqs assume-used # undetected by scan_prereqs, used via Riap
+;!lint_prereqs assume-used # undetected by scan_prereqs, used via Riap
 Perinci::Examples=0.43
