[dist] Move spec prereqs from RuntimeRequires to DevelopRecommends to reduce deps but still allow indicating spec requirement

--- a/dist.ini
+++ b/dist.ini
@@ -58,9 +58,10 @@ cmdline=classic
 ;Test::More=0.98
 
 [Prereqs]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.32
-
 perl=5.010001
 ;!lint_prereqs assume-used # undetected by scan_prereqs, used via Riap
 Perinci::Examples=0.43
+
+[Prereqs / DevelopRecommends]
+;!lint_prereqs assume-used # spec
+Rinci=1.1.32
