[dzil] Fix to make DZP:GenPericmdScript work

--- a/dist.ini
+++ b/dist.ini
@@ -22,6 +22,7 @@ url=/Perinci/Examples/gen_random_bytes
 name=peri-eg-gen-random-bytes
 cmdline=classic
 load_modules=Perinci::Examples
+build_load_modules=Perinci::Examples
 
 [GenPericmdScript/GenPericmdScript::read_file]
 url=/Perinci/Examples/FileStream/read_file
@@ -33,18 +34,21 @@ url=/Perinci/Examples/test_binary
 name=peri-eg-test-binary-files
 cmdline=classic
 load_modules=Perinci::Examples
+build_load_modules=Perinci::Examples
 
 [GenPericmdScript/GenPericmdScript::test_common_opts]
 url=/Perinci/Examples/test_common_opts
 name=peri-eg-test-common-opts
 cmdline=classic
 load_modules=Perinci::Examples
+build_load_modules=Perinci::Examples
 
 [GenPericmdScript/GenPericmdScript::test_completion]
 url=/Perinci/Examples/test_completion
 name=peri-eg-test-completion
 cmdline=classic
 load_modules=Perinci::Examples
+build_load_modules=Perinci::Examples
 
 [GenPericmdScript/GenPericmdScript::write_file]
 url=/Perinci/Examples/FileStream/write_file
