[dist] Move spec prereq from DevelopRecommends to DevelopSuggests with _SPEC:: prefix

--- a/dist.ini
+++ b/dist.ini
@@ -66,6 +66,5 @@ perl=5.010001
 ;!lint_prereqs assume-used # undetected by scan_prereqs, used via Riap
 Perinci::Examples=0.43
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.32
+[Prereqs / DevelopSuggests]
+_SPEC::Rinci=1.1.32
