[dist] Fix expressing follow-spec prereq relationship with x_spec

--- a/dist.ini
+++ b/dist.ini
@@ -66,5 +66,7 @@ perl=5.010001
 ;!lint_prereqs assume-used # undetected by scan_prereqs, used via Riap
 Perinci::Examples=0.43
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.32
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.32
